<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessWithMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="reportbugs">Please report bugs to either of us.</string>
    <string name="feedback">We value your feedback. Send us your suggestions </string>
    <string name="aboutus">About Us</string>
    <string name="madeby">Made By</string>
    <string name="kartik">Kartik Kohli</string>
    <string name="ajitesh">Ajitesh Gupta</string>
	<string name="selectday">Select Day:</string>
    <string name="start">Start Date</string>
    <string name="end">End Date</string>
    <string name="bf">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="cancel">Cancel Mess</string>
    <string name="uncancel">Uncancel</string>
    <string name="submit">Submit</string>
    <string name="refresh">Refresh</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="empty"/>
    <string name="login">Login</string>
    <string name="change">Change Mess</string>
    <string name="at">\@</string>
    <string name="remember">Remember Me</string>
    <string name="exit">Are you sure you want to close app?</string>
    <string name="logout">Are you sure you want to Logout?</string>
    <string name="obh_north">OBH-North</string>
    <string name="obh_south">OBH-South</string>
    <string name="nbh">NBH</string>
    <string name="nbh_egg">NBH-Egg</string>
    <string name="yukta">Yuktahaar</string>
    <string name="canteen">Canteen</string>
    <string name="admob_id">ca-app-pub-6141150157654458/9891556926</string>
</resources>
