<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
   	 android:id="@+id/drawer_layout"
   	 android:layout_width="match_parent"
   	 android:layout_height="match_parent"
   	 >
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp" >

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Breakfast" />

     <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox2"
        android:layout_marginTop="10sp"
        android:text="Lunch" />
    
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@id/checkBox1"
		android:layout_marginTop="10sp"
        android:text="Dinner" />
    
    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@id/checkBox3"
		android:layout_marginTop="10sp"
        android:text="UnCancel" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox4"
        android:layout_below="@+id/checkBox4"
        android:layout_marginTop="30sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/datePicker1"
        android:layout_marginTop="26sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/end" />

    <DatePicker
        android:id="@+id/datePicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/datePicker1"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="2sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePicker2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36sp"
        android:text="@string/cancel" />
    
</RelativeLayout>

</ScrollView>
 <!-- The navigation drawer -->
		<LinearLayout
	        android:id="@+id/drawer"
	        android:layout_width="@dimen/drawer_width"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_gravity="start"
	        android:gravity="center"
	        android:background="@color/drawer_background"
	         >
	        <ListView android:id="@+id/drawer_list"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:choiceMode="singleChoice"
	            android:divider="@drawable/nav_divider"
	        />
	 
	    </LinearLayout>
</android.support.v4.widget.DrawerLayout>